force-app/main/default/objects/Salary_History__c/Salary_History__c.object-meta.xml
<CustomObject>
    <label>Salary History</label>
    <pluralLabel>Salary Histories</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Salary History Number</label>
        <displayFormat>SH-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>