force-app/main/default/objects/Salary_History__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <label>Employer</label>
    <type>Text</type>
    <length>255</length>
</CustomField>