force-app/main/default/objects/Salary_History__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <label>External Id</label>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
    <length>255</length>
</CustomField>