force-app/main/default/objects/Salary_History__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>Line Number</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>