force-app/main/default/objects/Salary_History__c/fields/SourceFile__c.field-meta.xml
<CustomField>
    <fullName>SourceFile__c</fullName>
    <label>Source File</label>
    <type>Text</type>
    <length>255</length>
</CustomField>