force-app/main/default/objects/Salary_History__c/fields/TotalPay__c.field-meta.xml
<CustomField>
    <fullName>TotalPay__c</fullName>
    <label>Total Pay</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>